# project25

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/bootstrap/: Container.cpp  container.h
src/core/: App.cpp  App.h  IApp.h
